--- a/web_site/journal_layout.css
+++ b/web_site/journal_layout.css
@@ -6,16 +6,16 @@ body {
     width: 80%;
     margin: 0 auto;
     background: white;
-    border: 5px solid green;
+    border: 10px solid white;
 }
 
 .header {
     text-align: end;
-    border: 5px solid red;
+    background: #A8F0F0;
 }
 
 .header h2 {
-    border: 5px solid orange;
+    font-size: 14pt;
 }
 
 .post {
@@ -25,7 +25,7 @@ body {
     padding: 5px;
     margin-top: 10px;
     background: #E8FBFB;
-    border: 5px solid blue;
+    border: 4px solid #C2E9E9;
 }
 
 .post p img {
@@ -33,5 +33,5 @@ body {
 }
 
 .post .post-date {
-    border: 5px solid blueviolet;
+    border-bottom: 2px dashed #009097;
 }
